--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@nextui-org/react": "^1.0.1-alpha.57",
     "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "filesize": "^8.0.6",
+    "i18next": "^21.4.0",
     "next": "^12.0.3",
+    "ni18n": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.0",
+    "react-i18next": "^11.13.0",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1",
