--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1",
     "tailwindcss": "^3.0.0-alpha.1",
+    "usehooks-ts": "^1.1.0",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
