--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^1.0.1-alpha.57",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
+    "csv-parse": "^4.16.3",
     "filesize": "^8.0.6",
     "i18next": "^21.4.0",
     "next": "^12.0.3",
