--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "filesize": "^8.0.6",
     "i18next": "^21.4.0",
     "next": "^12.0.3",
+    "next-seo": "^4.28.1",
     "ni18n": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
