--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "plugin:@next/next/core-web-vitals",
     "plugin:@next/next/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:mdx/recommended",
     "plugin:react/recommended",
     "plugin:sonarjs/recommended"
   ],
