--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1",
-    "tailwindcss": "^3.0.0-alpha.1",
+    "tailwindcss": "^3.0.0-alpha.2",
     "usehooks-ts": "^1.1.0",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-mdx": "^1.16.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-tailwindcss": "^1.17.0",
+    "eslint-plugin-tailwindcss": "^1.17.1",
     "prettier": "^2.4.1",
     "tailwindcss-truncate-multiline": "^1.0.3",
     "typescript": "^4.4.4"
