--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.5.0-alpha.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
@@ -51,7 +52,6 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-tailwindcss": "^1.17.1",
     "prettier": "^2.4.1",
-    "tailwindcss-truncate-multiline": "^1.0.3",
     "typescript": "^4.4.4"
   }
 }
