--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.1",
     "react-i18next": "^11.13.0",
+    "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1",
