--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.3",
     "@nextui-org/react": "^1.0.1-alpha.57",
+    "@sentry/nextjs": "^6.14.1",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
     "csv-parse": "^4.16.3",
