--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "swr": "^1.0.1",
     "tailwindcss": "^3.0.0-alpha.2",
     "usehooks-ts": "^1.1.1",
+    "xlsx": "^0.17.3",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
