--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
+    "scoutbar": "^1.1.7",
     "swr": "^1.0.1",
     "tailwindcss": "^3.0.0-alpha.2",
     "usehooks-ts": "^2.0.1",
