--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,12 @@
     "plugin:@next/next/core-web-vitals",
     "plugin:@next/next/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:mdx/recommended",
+    "plugin:import/typescript",
+    "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended",
     "plugin:promise/recommended",
     "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
     "plugin:sonarjs/recommended",
     "plugin:tailwindcss/recommended"
   ],
@@ -23,7 +26,8 @@
   },
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "react/react-in-jsx-scope": 0
+    "jsx-a11y/anchor-is-valid": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": { "version": "detect" }
