--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sentry/nextjs": "^6.15.0",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
-    "csv-parse": "^5.0.2",
+    "csv-parse": "^5.0.3",
     "filesize": "^8.0.6",
     "i18next": "^21.5.2",
     "next": "^12.0.4",
@@ -30,30 +30,35 @@
     "ni18n": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.19.5",
+    "react-hook-form": "^7.20.2",
     "react-i18next": "^11.14.2",
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
-    "scoutbar": "^1.1.7",
+    "scoutbar": "^1.1.8",
     "swr": "^1.0.1",
     "tailwindcss": "^3.0.0-alpha.2",
-    "usehooks-ts": "^2.0.1",
+    "usehooks-ts": "^2.0.2",
     "xlsx": "^0.17.4",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.5.0-alpha.3",
-    "@types/node": "^16.11.8",
-    "@types/react": "^17.0.35",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "eslint": "8.2.0",
-    "eslint-config-next": "12.0.4",
-    "eslint-plugin-mdx": "^1.16.0",
+    "eslint": "8.3.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-tailwindcss": "^1.17.2",
+    "eslint-plugin-typescript": "^0.14.0",
     "prettier": "^2.4.1",
     "typescript": "^4.5.2"
   }
