--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "plugin:@next/next/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/typescript",
+    "plugin:mdx/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:prettier/recommended",
     "plugin:promise/recommended",
@@ -18,6 +19,7 @@
     "plugin:sonarjs/recommended",
     "plugin:tailwindcss/recommended"
   ],
+  "overrides": [{ "files": "*.mdx", "parser": "eslint-mdx" }],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": { "jsx": true },
